--- a/utils/Val_Reasoner.ipynb
+++ b/utils/Val_Reasoner.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e67dcff7-f285-4132-8ea8-65824d19e440",
-   "metadata": {
-    "id": "e67dcff7-f285-4132-8ea8-65824d19e440"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def scrittura_file(df, path, nome_file, header):\n",
@@ -19,14 +17,47 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a024a622-f584-4abf-82e6-15ed8b286650",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: rdflib in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (6.1.1)\n",
+      "Requirement already satisfied: isodate in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from rdflib) (0.6.1)\n",
+      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from rdflib) (58.1.0)\n",
+      "Requirement already satisfied: pyparsing in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from rdflib) (3.0.7)\n",
+      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from isodate->rdflib) (1.16.0)\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.1.2 is available.\n",
+      "You should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.9/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: SPARQLWrapper in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (1.8.5)\n",
+      "Requirement already satisfied: rdflib>=4.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from SPARQLWrapper) (6.1.1)\n",
+      "Requirement already satisfied: pyparsing in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from rdflib>=4.0->SPARQLWrapper) (3.0.7)\n",
+      "Requirement already satisfied: isodate in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from rdflib>=4.0->SPARQLWrapper) (0.6.1)\n",
+      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from rdflib>=4.0->SPARQLWrapper) (58.1.0)\n",
+      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from isodate->rdflib>=4.0->SPARQLWrapper) (1.16.0)\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.1.2 is available.\n",
+      "You should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.9/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install rdflib\n",
+    "!pip install SPARQLWrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "0c8ad43b-9395-4b6d-bbd9-e5eb4e61eaae",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 447
-    },
-    "id": "0c8ad43b-9395-4b6d-bbd9-e5eb4e61eaae",
-    "outputId": "d15e04b2-37ee-49a9-9436-e1d887043cf4",
     "tags": []
    },
    "outputs": [],
@@ -45,34 +76,27 @@
     "from openpyxl import Workbook\n",
     "from openpyxl import load_workbook\n",
     "\n",
+    "\n",
+    "\n",
     "headers = {\n",
     "    'accept': 'text/turtle',\n",
-    "    'Authorization': 'Bearer ef127c72-fa55-3075-9729-7263d0ae50d2',\n",
+    "    'Authorization': 'Bearer a7727b8c-aa1e-39d4-8b34-3977ec1c73f5',\n",
     "}\n",
     "\n",
     "# here you declare the endpoint, you can have it in localhost or you can use the online Framester one\n",
     "\n",
-    "# valuesparql = SPARQLWrapper('http://localhost:3030/ValueNet/sparql') # change with: 'http://etna.istc.cnr.it/framester2/sparql'\n",
     "valuesparql = SPARQLWrapper('http://localhost:3030/ValueNet/sparql') # change with: 'http://etna.istc.cnr.it/framester2/sparql'\n",
+    "\n",
+    "\n",
     "\n",
     "comment = URIRef(\"http://www.w3.org/2000/01/rdf-schema#comment\")\n",
     "sample_phrase = URIRef(\"http://sample_phrase.org/\")\n",
     "\n",
-    "all_names = [\n",
-    "    Namespace(\"https://w3id.org/framester/wn/wn30/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/vn/vn31/data/\"), \n",
-    "    Namespace(\"<http://dbpedia.org/resource/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/data/framestercore/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/pb/pbdata/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/framenet/abox/gfe/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/pb/pbschema/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/wn/wn30/wordnet-verbnountropes/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/data/framesterrole/\"), \n",
-    "    Namespace(\"http://babelnet.org/rdf/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/framenet/abox/fe/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/framenet/abox/frame/\"), \n",
-    "    Namespace(\"https://w3id.org/framester/data/framestersyn/\") \n",
-    "]\n",
+    "\n",
+    "\n",
+    "all_names = [Namespace(\"https://w3id.org/framester/wn/wn30/\"), Namespace(\"https://w3id.org/framester/vn/vn31/data/\"), Namespace(\"<http://dbpedia.org/resource/\"), Namespace(\"https://w3id.org/framester/data/framestercore/\"), Namespace(\"https://w3id.org/framester/pb/pbdata/\"), Namespace(\"https://w3id.org/framester/framenet/abox/gfe/\"), Namespace(\"https://w3id.org/framester/pb/pbschema/\"), Namespace(\"https://w3id.org/framester/wn/wn30/wordnet-verbnountropes/\"), Namespace(\"https://w3id.org/framester/data/framesterrole/\"), Namespace(\"http://babelnet.org/rdf/\"), Namespace(\"https://w3id.org/framester/framenet/abox/fe/\"), Namespace(\"https://w3id.org/framester/framenet/abox/frame/\"), Namespace(\"https://w3id.org/framester/data/framestersyn/\") ]\n",
+    "\n",
+    "\n",
     "\n",
     "# this function makes a call to FRED to generate a graph from sentence (you can save it as Turtle file .ttl)\n",
     "\n",
@@ -90,6 +114,7 @@
     "  #return response.text \n",
     "  with open('out1.ttl','w') as out1: \n",
     "    out1.write(response.text)\n",
+    "\n",
     "\n",
     "# this function find value triggers\n",
     "\n",
@@ -128,7 +153,7 @@
     "                    \n",
     "                    queryValueSubj = (\n",
     "                    '''\n",
-    "                    PREFIX vcvf: <http://www.semanticweb.org/sdg/ontologies/2022/0/valuecore_with_value_frames.owl#>\n",
+    "                    PREFIX vcvf: <http://www.ontologydesignpatterns.org/ont/values/valuecore_with_value_frames.owl#>\n",
     "                    PREFIX haidt: <https://w3id.org/spice/SON/HaidtValues#>\n",
     "\n",
     "                    CONSTRUCT { <'''+z+'''> vcvf:triggers ?o . }\n",
@@ -156,7 +181,7 @@
     "                    \n",
     "                    queryValueObj = (\n",
     "                    '''\n",
-    "                    PREFIX vcvf: <http://www.semanticweb.org/sdg/ontologies/2022/0/valuecore_with_value_frames.owl#>\n",
+    "                    PREFIX vcvf: <http://www.ontologydesignpatterns.org/ont/values/valuecore_with_value_frames.owl#>\n",
     "                    PREFIX haidt: <https://w3id.org/spice/SON/HaidtValues#>\n",
     "\n",
     "                    CONSTRUCT { <'''+o+'''> vcvf:triggers ?o . }\n",
@@ -186,23 +211,19 @@
     "#  for s,p,o in finalg:\n",
     "#    print(s,p,o)\n",
     "\n",
+    "     \n",
+    "\n",
     "  diz = {'sub':sub,\n",
     "         'obj':obj}  \n",
-    "  return diz\n",
-    "\n"
+    "  return diz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "40334222-2481-4d67-b241-45dd048690cc",
+   "execution_count": 4,
+   "id": "066c78e1-73b8-450e-a449-f14153cb7a1c",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 483
-    },
-    "id": "40334222-2481-4d67-b241-45dd048690cc",
-    "outputId": "3ce76964-16de-4da1-f14d-6dcf838cb439",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -210,11 +231,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here\n",
-      "Someone has to stop that awful killer.\n",
-      "\n",
+      "Requirement already satisfied: sklearn in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.0)\n",
+      "Requirement already satisfied: scikit-learn in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from sklearn) (1.0.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn->sklearn) (3.1.0)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.8.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.1.0)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.22.1)\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.1.2 is available.\n",
+      "You should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.9/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40334222-2481-4d67-b241-45dd048690cc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['harm']\n",
-      "{'sent': ['Someone has to stop that awful killer.'], 'label': [nan], 'pred': ['harm'], 'trig': ['https://w3id.org/framester/data/framestercore/Killing, https://w3id.org/framester/wn/wn30/instances/synset-killer-noun-1']}\n",
+      "{'sent': ['Someone has to stop that awful killer'], 'label': [nan], 'pred': ['harm'], 'trig': ['https://w3id.org/framester/data/framestercore/Killing, https://w3id.org/framester/wn/wn30/instances/synset-killer-noun-1']}\n",
       "0/1\n"
      ]
     }
@@ -229,16 +274,13 @@
     "\n",
     "# here you declare the path to your file to be tested\n",
     "\n",
-    "doc = pd.read_csv('test.csv')\n",
+    "doc = pd.read_csv('/Users/sdg/Downloads/DMH_value_test1 - Foglio6.csv')\n",
     "\n",
     "for index,row in doc.iterrows():\n",
-    "  print(\"Here\")\n",
     "  txt = row['txt']\n",
     "  label = row['label']\n",
     "  try:\n",
     "    out1 = test_graph(txt)\n",
-    "    print(txt)\n",
-    "    print()\n",
     "    out2 = find_trigs('out1.ttl',txt)\n",
     "\n",
     "    # this is just to have a cleaner output without the full URI but only with the value name\n",
@@ -256,7 +298,7 @@
     "    print(out)\n",
     "\n",
     "    df = pd.DataFrame(out)\n",
-    "    scrittura_file (df, '', 'emoval_test.csv', [k for k in out.keys()])\n",
+    "    scrittura_file (df, '', 'emoval_DMH_foglio6.csv', [k for k in out.keys()])\n",
     "    #if index==1:break\n",
     "\n",
     "    print(f\"{index}/{len(doc)}\")\n",
@@ -265,29 +307,46 @@
     "      time.sleep(t)\n",
     "\n",
     "  except Exception:\n",
-    "    print(\"ERRORE\")\n",
     "    continue\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "6b4e2f59-ffa0-4c52-b454-9edb61ed64e8",
-   "metadata": {
-    "id": "6b4e2f59-ffa0-4c52-b454-9edb61ed64e8",
-    "outputId": "93f4f491-a7c6-4fec-feed-8d94a450f8d8"
-   },
+   "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'float' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [11], line 24\u001b[0m\n\u001b[0;32m      9\u001b[0m doc \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124memoval_test.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m mapping \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     12\u001b[0m   \u001b[38;5;241m0\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcare\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     13\u001b[0m   \u001b[38;5;241m1\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpurity\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m   \u001b[38;5;241m9\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mharm\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     22\u001b[0m   \u001b[38;5;241m10\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauthority\u001b[39m\u001b[38;5;124m'\u001b[39m}\n\u001b[1;32m---> 24\u001b[0m label \u001b[38;5;241m=\u001b[39m  [[k \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m ele\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m mapping\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;241m==\u001b[39m v] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m doc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m     25\u001b[0m predizioni \u001b[38;5;241m=\u001b[39m [[k \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(ele)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m mapping\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;241m==\u001b[39m v] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m doc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mone_hot\u001b[39m (etichette):\n",
-      "Cell \u001b[1;32mIn [11], line 24\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      9\u001b[0m doc \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124memoval_test.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m mapping \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     12\u001b[0m   \u001b[38;5;241m0\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcare\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     13\u001b[0m   \u001b[38;5;241m1\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpurity\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m   \u001b[38;5;241m9\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mharm\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     22\u001b[0m   \u001b[38;5;241m10\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauthority\u001b[39m\u001b[38;5;124m'\u001b[39m}\n\u001b[1;32m---> 24\u001b[0m label \u001b[38;5;241m=\u001b[39m  [[k \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[43mele\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m mapping\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;241m==\u001b[39m v] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m doc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m     25\u001b[0m predizioni \u001b[38;5;241m=\u001b[39m [[k \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(ele)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m mapping\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;241m==\u001b[39m v] \u001b[38;5;28;01mfor\u001b[39;00m ele \u001b[38;5;129;01min\u001b[39;00m doc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mone_hot\u001b[39m (etichette):\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'float' object has no attribute 'split'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        care       0.28      0.58      0.38       439\n",
+      "      purity       0.24      0.45      0.31       139\n",
+      "   non-moral       0.64      0.65      0.65      2553\n",
+      "     loyalty       0.32      0.27      0.29       336\n",
+      "    cheating       0.73      0.32      0.44       571\n",
+      "    fairness       0.26      0.25      0.25       374\n",
+      "  subversion       0.28      0.17      0.21       347\n",
+      "    betrayal       0.49      0.23      0.31       201\n",
+      " degradation       0.45      0.10      0.17       247\n",
+      "        harm       0.38      0.72      0.50       676\n",
+      "   authority       0.16      0.14      0.15       276\n",
+      "\n",
+      "   micro avg       0.46      0.49      0.47      6159\n",
+      "   macro avg       0.38      0.35      0.33      6159\n",
+      "weighted avg       0.49      0.49      0.46      6159\n",
+      " samples avg       0.49      0.51      0.49      6159\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -300,7 +359,7 @@
     "\n",
     "# this is eventually to test some metrics, to be fine tuned according to your needs\n",
     "\n",
-    "doc = pd.read_csv('emoval_test.csv')\n",
+    "doc = pd.read_csv('emoval_DMH_foglio6.csv')\n",
     "\n",
     "mapping = {\n",
     "  0: 'care',\n",
@@ -340,17 +399,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2cfdd53e-0dbc-49b8-9670-f5cd04677a72",
-   "metadata": {
-    "id": "2cfdd53e-0dbc-49b8-9670-f5cd04677a72"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "colab": {
-   "provenance": []
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -366,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
